fix default collapsed of filter course, fix css of course card flexend to spacebetween

--- a/client/src/pages/Courses/list/CourseListPage.css
+++ b/client/src/pages/Courses/list/CourseListPage.css
@@ -166,7 +166,8 @@
     transition: all 0.3s ease;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
+    height: fit-content;
 }
 
 .course-list-card:hover {
